@@ -14,7 +14,7 @@ public class Knight extends Mob {
 	int ya;
 	int xe = xa;
 	int ye = ya;
-	private int lvl;
+	//private int lvl;
 	private int randomWalkTime = 0;
 
 	public Knight(int lvl) {
