@@ -1,6 +1,7 @@
 Minicraft+ version 1.9.1
 
--
+=Armor now functions as a damage buffer rather than extra hearts; you take damage after only a certain number of damage points accumulate.
++Armor lasts longer.
 
 
 Minicraft+ version 1.9
